--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
   
 
   <div class="container mt-3 text-white rounded">
-    <h2>Welcome to my Personal Portfolio Page</h2>
-
+    <header><h2>Welcome to my Personal Portfolio Page</h2></header>
+<section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <!--Logo for home page-->
@@ -48,6 +48,7 @@
         <button class="btn btn-success btn-lg" type="button" >Know more About Me</button>
       </a>      
     </div>
+  </section>
   </div>
 
 
