--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -12,19 +12,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
 
-        
+        <header>
               <a class="navbar-brand" href="/">
-                <img src="/Assets/images/LogoYKH.png" alt="" width="80" height="80" class="d-inline-block align-text-top">
-                COMP229
-              </a>
-      
+                <img src="/Assets/images/LogoYKH.png" alt="" width="50" height="50" class="d-inline-block align-text-top">                
+              </a>        
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+    </header>
 
 <!--This Express site must include the pages from your Personal Portfolio 5 pages – your 
 Home page, an About Me page, a Projects page, a Services page, and a Contact Me page.-->
-
+<header>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- ml-auto => ms-auto (start); mr-auto => me-auto (end) -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -77,6 +76,7 @@ Home page, an About Me page, a Projects page, a Services page, and a Contact Me 
         </ul>
         
       </div>
+    </header>
     </div>
   </nav>
 
