--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -31,11 +31,13 @@
   
 
   <div class="container mt-3 text-white rounded">
-    <h2>My Projects</h2>
-
+    <header><h2>My Projects</h2></header>
+<section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
+      
       <div class="container">
+        
         <!--project main image-->
         <div class="row justify-content-start">
           <div class="col">
@@ -51,17 +53,20 @@
         </div>
         <!--project detail-->
         <div class="justify-content-start">
-          <h1 class="display-6">Sooff web game</h1>
+          <header><h1 class="display-6">Sooff web game</h1></header>
+          <section>
           <p class="fs-4">Sooff online game is an online game with social platform that contains avatars, social communication, trading, collecting and mini games</p>
           <p class="fs-4">mini game developer</p>
           <!--button to project detail-->
           <a href="https://www.youtube.com/watch?v=_XStaS8fvHg">
             <button class="btn btn-success btn-lg" type="button">Know more</button>
-          </a>            
+          </a>     
+        </section>       
         </div>
       </div>
     </div>
-
+  </section>
+  <section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <div class="container">
@@ -80,17 +85,20 @@
         </div>
       <!--project detail-->
         <div class="justify-content-start">
-          <h1 class="display-6">Hello Kitty Online</h1>
+          <header><h1 class="display-6">Hello Kitty Online</h1></header>
+          <section>
           <p class="fs-4">Hello Kitty Online is an online game with social platform that contains avatars, social communication, trading, collecting and mini games</p> 
           <p class="fs-4">full-stack developer</p> 
           <!--button to project detail-->
           <a href="https://www.hellokittyonline.com/">
             <button class="btn btn-success btn-lg" type="button">Know more</button>
-          </a>            
+          </a>     
+        </section>       
         </div>
       </div>
     </div>
-
+  </section>
+  <section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <div class="container">
@@ -109,17 +117,19 @@
         </div>
         <!--project detail-->
         <div class="justify-content-start">
-          <h1 class="display-6">Pretty Pet Farm</h1>
+          <header><h1 class="display-6">Pretty Pet Farm</h1></header>
+          <section>
           <p class="fs-4">Pretty Pet Farm is a mobile game built on IOS and Android</p> 
           <p class="fs-4">IOS developer</p> 
           <!--button to project detail-->
           <a href="https://apkfab.com/pretty-pet-farm/com.ac.google.petFarm">
             <button class="btn btn-success btn-lg" type="button">Know more</button>
           </a>
+        </section>
         </div>
       </div>
     </div>
-
+  </section>
   </div>
 
 </main>
