--- a/views/services.ejs
+++ b/views/services.ejs
@@ -30,7 +30,8 @@
   
 
   <div class="container mt-3 text-white rounded">
-    <h2>Services</h2>
+    <header><h2>Services</h2></header>
+    <section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <div class="container">
@@ -40,20 +41,23 @@
             <img src="/Assets/images/game_developer.jpg" alt="" width="400" height="400" class="img-thumbnail rounded ">
           </div>
           <!--service detail-->
-          <div class="col justify-content-start">
-            <h1 class="display-6">As a Game Developer</h1>
+          <div class="col justify-content-start">            
+            <header><h1 class="display-6">As a Game Developer</h1></header>
+            <section>
             <p class="fs-4">Game Programming, Game Design, GUI, Front & Back End Programming</p>
             <p class="fs-4">Unity, Cocos2d, Cocos2dx, C++, C#, Objective-C, Java, MySQL, SQL Server</p>
             <!--button to contact me-->
             <a href="/contactme">
               <button class="btn btn-success btn-lg" type="button">Contact Me</button>
             </a>
-              
+          </section>
           </div>
         </div>
 
       </div>
     </div>
+  </section>
+  <section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <div class="container">
@@ -64,19 +68,22 @@
           </div>
           <!--service detail-->
           <div class="col justify-content-start">
-            <h1 class="display-6">As a Mobile Developer</h1>
+            <header><h1 class="display-6">As a Mobile Developer</h1></header>
+            <section>
             <p class="fs-4">Mobile Game Programming, Mobile Development, GUI, Front & Back End Programming</p>
             <p class="fs-4">Unity, Cocos2d, Cocos2dx, C++, C#, Objective-C, MySQL</p>
             <!--button to contact me-->
             <a href="/contactme">
               <button class="btn btn-success btn-lg" type="button">Contact Me</button>
             </a>
-              
+          </section>
           </div>
         </div>
 
       </div>
     </div>
+  </section>
+  <section>
     <!--a box for displaying the key contents-->
     <div class="mt-4 p-5 bg-secondary text-white rounded">
       <div class="container">
@@ -87,18 +94,21 @@
           </div>
           <!--service detail-->
           <div class="col justify-content-start">
-            <h1 class="display-6">As a Full-Stack Developer</h1>
+            <header><h1 class="display-6">As a Full-Stack Developer</h1></header>
+            <section>
             <p class="fs-4">Programming, GUI, Front & Back End Programming</p>
             <p class="fs-4">C++, C#, Objective-C, Java, MySQL, SQL Server</p>
             <!--button to contact me-->
-            <a href="/contactme"></a>
+            <a href="/contactme">
               <button class="btn btn-success btn-lg" type="button">Contact Me</button>
+            </a>
+            </section>
           </div>
         </div>
 
       </div>
     </div>
-
+  </section>
 
   </div>
 
