--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -30,19 +30,21 @@
 
 
   <div class="container mt-3">
-    <h2><%= title %></h2>
+    <header><h2><%= title %></h2></header>
     <div class="mt-4 p-5 bg-primary text-white rounded  padding-1 border-radius-30 ">
 
-
+    <section>
       <div class="container">
         <div class="row align-items-start">
           <div class="col">
             <img src="/Assets/images/YKH_school_photo.jpg" alt="" width="200" height="200" class="d-inline-block align-text-top">
           </div>
           <div class="col">
-            <h1 class="name">Kai Hong Yeung</h1>        
+            <header><h1 class="name">Kai Hong Yeung</h1></header>
+            <section>
             <p>Game Developer, Mobile Developer</p>               
             <a href="mailto:kyeung39@my.centennialcollege.ca" class="link-dark"><i class="fas fa-envelope-square"></i> kyeung39@my.centennialcollege.ca</a>
+          </section>
           </div>
         </div>
         <div class="row">
@@ -56,7 +58,7 @@
           
         </div>
       </div>
-
+    </section>
     </div>
   </div>
 
